Bring back the `utils` module(previously named `common`) Support reading MCP mappings Refactor `MappingProcessor`s and introduce `ContentList` New component: `SideSpecific` Make `PropertiesTrait` also a `Component`